# iced_soundboard

./: Cargo.toml  README.md  flake-orig.nix  flake.nix  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4fgs7yzsy2dqnjw8j42qlp9i1vgarzy0-source  piij7gcls3afjk90ib58ab0bv7lkpc5k-source  vf6skxhiqknlnqcxh8n4z2jldzzpb171-source
.github/workflows/: build.yml
assets/adwaita-icons/: LICENSE
nix/: flake.nix
src/: app.rs  audio.rs  main.rs  saving.rs  styling.rs  ui.rs
src/style/: button.rs  container.rs  icons.rs  mod.rs  rule.rs  scrollable.rs  slider.rs  svg.rs  theme.rs
