[package]
name = "iced_soundboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["async-std", "debug"] }
rfd = "0.12.0"
kira = "0.8.5"
jack = "0.11.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
directories-next = "2.0.0"
async-std = "1.12.0"
lofty = "0.17.1"