[package]
name = "iced_soundboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["async-std", "debug", "svg"] }
iced_aw = { version = "0.9.3", features = ["icons"] }
rfd = "0.15.2"
kira = "0.10.4"
jack = "0.13.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
directories-next = "2.0.0"
async-std = "1.13.0"
lofty = "0.22.2"
youtube_dl = "0.10.0"
regex = "1.11.1"
include_dir = "*"
lazy_static = "1.5.0"
